--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
 
     <!--====== Title ======-->
-    <title>KRG DEV - Develop your ideas</title>
+    <title>KRG DEV - Desarrolla tu idea</title>
 
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -118,13 +118,12 @@
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="slider-content">
-                                    <h1 class="title">Business is Now Digital</h1>
-                                    <p class="text">We blend insights and strategy to create digital products for
-                                        forward-thinking organisations.</p>
-                                    <ul class="slider-btn rounded-buttons">
+                                    <h1 class="title">Software a medida</h1>
+                                    <p class="text">Desarrolla tu idea para impulsar tu éxito.</p>
+                                    <!-- <ul class="slider-btn rounded-buttons">
                                         <li><a class="main-btn rounded-one" href="#">GET STARTED</a></li>
                                         <li><a class="main-btn rounded-two" href="#">DOWNLOAD</a></li>
-                                    </ul>
+                                    </ul> -->
                                 </div>
                             </div>
                         </div> <!-- row -->
