--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
 
                         <div class="collapse navbar-collapse sub-menu-bar" id="navbarTwo">
                             <ul class="navbar-nav m-auto">
-                                <li class="nav-item active"><a class="page-scroll" href="#home">home</a></li>
-                                <li class="nav-item"><a class="page-scroll" href="#services">Services</a></li>
-                                <li class="nav-item"><a class="page-scroll" href="#team">Team</a></li>
-                                <li class="nav-item"><a class="page-scroll" href="#contact">Contact</a></li>
+                                <li class="nav-item active"><a class="page-scroll" href="#home">Inicio</a></li>
+                                <li class="nav-item"><a class="page-scroll" href="#services">Servicios</a></li>
+                                <li class="nav-item"><a class="page-scroll" href="#team">Equipo</a></li>
+                                <li class="nav-item"><a class="page-scroll" href="#contact">Contacto</a></li>
                             </ul>
                         </div>
 
