--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6 col-md-10">
                     <div class="section-title text-center pb-30">
-                        <h3 class="title">Conocenos</h3>
+                        <h3 class="title">Conócenos</h3>
                         <p class="text">Enfrentate a uno de los mejores jugadores de Dota. <br /> Gratis!</p>
                         <img src="./assets/images/xiri.jpg" />
                     </div> <!-- section title -->
@@ -228,7 +228,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6 col-md-10">
                     <div class="section-title text-center pb-30">
-                        <h3 class="title">Contact</h3>
+                        <h3 class="title">Contactanos</h3>
                         <p class="text">¿Necesitas asesoría en el desarrollo de tu proyecto?</p>
                     </div> <!-- section title -->
                 </div>
