--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!--====== Favicon Icon ======-->
-    <link rel="shortcut icon" href="assets/images/favicon.png" type="image/png">
+    <link rel="shortcut icon" href="assets/images/logo.png" type="image/png">
 
     <!--====== Magnific Popup CSS ======-->
     <link rel="stylesheet" href="assets/css/magnific-popup.css">
@@ -68,7 +68,7 @@
                     <nav class="navbar navbar-expand-lg">
 
                         <a class="navbar-brand" href="#">
-                            <img src="assets/images/logo.svg" alt="Logo">
+                            <img src="assets/images/logo.png" width="200px" alt="Logo">
                         </a>
 
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTwo"
@@ -83,6 +83,7 @@
                                 <li class="nav-item active"><a class="page-scroll" href="#home">Inicio</a></li>
                                 <li class="nav-item"><a class="page-scroll" href="#services">Servicios</a></li>
                                 <li class="nav-item"><a class="page-scroll" href="#team">Equipo</a></li>
+                                <li class="nav-item"><a class="page-scroll" href="#tecnologias">Tecnologías</a></li>
                                 <li class="nav-item"><a class="page-scroll" href="#contact">Contacto</a></li>
                             </ul>
                         </div>
@@ -116,7 +117,7 @@
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="slider-content">
-                                    <h1 class="title">Software a medida</h1>
+                                    <h1 class="title">Bienvenido al mundo de la innovación digital. </h1>
                                     <p class="text">Desarrolla tu idea para impulsar tu éxito.</p>
                                     <!-- <ul class="slider-btn rounded-buttons">
                                         <li><a class="main-btn rounded-one" href="#">GET STARTED</a></li>
@@ -208,11 +209,15 @@
     <section id="team" class="team-area pt-120 pb-130">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-lg-6 col-md-10">
+                <div class="col-lg-9 col-md-10">
                     <div class="section-title text-center pb-30">
                         <h3 class="title">Conócenos</h3>
-                        <p class="text">Enfrentate a uno de los mejores jugadores de Dota. <br /> Gratis!</p>
-                        <img src="./assets/images/xiri.jpg" />
+                        <p class="text">Expertos en desarrollo de software a medida.<br />
+                            Somos un equipo apasionado y experto en desarrollo de software. Nos especializamos en crear
+                            soluciones personalizadas para satisfacer las necesidades de nuestros clientes. Con un
+                            enfoque en la calidad y la innovación, trabajamos en estrecha colaboración con usted para
+                            impulsar el crecimiento de su negocio a través de la tecnología. Confíe en nuestro
+                            conocimiento y experiencia para llevar su visión a la realidad.</p>
                     </div> <!-- section title -->
                 </div>
             </div> <!-- row -->
@@ -220,6 +225,68 @@
     </section>
 
     <!--====== TEAM  ENDS ======-->
+
+    <section id="tecnologias" class="team-area pt-120 pb-130">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-9 col-md-10">
+                    <div class="section-title text-center pb-30">
+                        <h3 class="title">Tecnologías</h3>
+                        <!-- <p class="text">Nuestras </p> -->
+                        <br />
+                        <p>
+                            En nuestra empresa, nos mantenemos a la vanguardia de la tecnología para brindar soluciones
+                            de desarrollo de software de calidad. Nuestro equipo de expertos utiliza una amplia gama de
+                            tecnologías modernas y herramientas líderes en la industria para crear aplicaciones
+                            eficientes y de alto rendimiento
+                        </p>
+                        <br />
+                        <div class="row">
+                            <div class="col" style="width: 50px;" title="React">
+                                <img src="./assets/images/react-icon.svg" alt="React" />
+                            </div>
+                            <div class="col" style="width: 50px;" title="Vue">
+                                <img src="./assets/images/vue-icon.svg" alt="Vue" />
+                            </div>
+                            <div class="col" style="width: 50px;" title="Laravel">
+                                <img src="./assets/images/laravel-icon.svg" alt="Laravel" />
+                            </div>
+                            <div class="col" style="width: 50px;" title="Amazon Web Services">
+                                <img src="./assets/images/aws-icon.svg" alt="Amazon Web Services" />
+                            </div>
+                            <div class="col" style="width: 50px;" title="Git">
+                                <img src="./assets/images/git-icon.svg" alt="Git" />
+                            </div>
+                            <div class="col" style="width: 50px;" title="Linux">
+                                <img src="./assets/images/linux-icon.svg" alt="Linux" />
+                            </div>
+                        </div>
+                        <div class="row pt-5">
+                            <div class="col" style="width: 50px;" title="Angular">
+                                <img src="./assets/images/angular-icon.svg" alt="Angular" />
+                            </div>
+                            <div class="col" style="width: 50px;" title="Docker">
+                                <img src="./assets/images/docker-icon.svg" alt="Docker" />
+                            </div>
+                            <div class="col" style="width: 50px;" title="Android">
+                                <img src="./assets/images/android-icon.svg" alt="Android" />
+                            </div>
+                            <div class="col" style="width: 50px;" title="Javascript">
+                                <img src="./assets/images/js-icon.svg" alt="Javascript" />
+                            </div>
+                            <div class="col" style="width: 50px;" title="Python">
+                                <img src="./assets/images/python-icon.svg" alt="Python" />
+                            </div>
+                            <div class="col" style="width: 50px;" title="Node">
+                                <img src="./assets/images/node-icon.svg" alt="Node" />
+                            </div>
+
+                        </div>
+                    </div> <!-- section title -->
+                </div>
+            </div> <!-- row -->
+        </div> <!-- container -->
+    </section>
 
     <!--====== CONTACT PART START ======-->
 
@@ -289,17 +356,18 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6">
                     <div class="footer-logo text-center">
-                        <a class="mt-30" href="index.html"><img src="assets/images/logo.svg" alt="Logo"></a>
+                        <a class="mt-30" href="index.html"><img width="250px" src="assets/images/logo-3.png"
+                                alt="Logo"></a>
                     </div> <!-- footer logo -->
-                    <ul class="social text-center mt-60">
+                    <!-- <ul class="social text-center mt-60">
                         <li><a href="https://facebook.com/uideckHQ"><i class="lni lni-facebook-filled"></i></a></li>
                         <li><a href="https://twitter.com/uideckHQ"><i class="lni lni-twitter-original"></i></a></li>
                         <li><a href="https://instagram.com/uideckHQ"><i class="lni lni-instagram-original"></i></a></li>
                         <li><a href="#"><i class="lni lni-linkedin-original"></i></a></li>
-                    </ul> <!-- social -->
+                    </ul> --> <!-- social -->
                     <div class="footer-support text-center">
                         <span class="number">+56997858386</span>
-                        <span class="mail">krg.dev@gmail.com</span>
+                        <span class="mail">krg.develop@gmail.com</span>
                     </div>
                     <!-- <div class="copyright text-center mt-35">
                         <p class="text">Designed by <a href="https://uideck.com" rel="nofollow">UIdeck</a> and
