--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                                 <i class="lni lni-phone"></i>
                             </div>
                             <div class="contact-info-content media-body mt-3">
-                                <p class="text">(+56) 997858386</p>
+                                <p class="text">(+56) 9 97858386</p>
                             </div>
                         </div> <!-- single contact info -->
                     </div>
@@ -366,7 +366,7 @@
                         <li><a href="#"><i class="lni lni-linkedin-original"></i></a></li>
                     </ul> --> <!-- social -->
                     <div class="footer-support text-center">
-                        <span class="number">+56997858386</span>
+                        <span class="number">(+56) 9 97858386</span>
                         <span class="mail">krg.develop@gmail.com</span>
                     </div>
                     <!-- <div class="copyright text-center mt-35">
