fix images width

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <nav class="navbar navbar-expand-lg">
 
                         <a class="navbar-brand" href="#">
-                            <img src="assets/images/logo.png" width="200px" alt="Logo">
+                            <img src="assets/images/logo.png" width="150px" alt="Logo">
                         </a>
 
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTwo"
@@ -82,7 +82,7 @@
                             <ul class="navbar-nav m-auto">
                                 <li class="nav-item active"><a class="page-scroll" href="#home">Inicio</a></li>
                                 <li class="nav-item"><a class="page-scroll" href="#services">Servicios</a></li>
-                                <li class="nav-item"><a class="page-scroll" href="#team">Equipo</a></li>
+                                <li class="nav-item"><a class="page-scroll" href="#team">Conócenos</a></li>
                                 <li class="nav-item"><a class="page-scroll" href="#tecnologias">Tecnologías</a></li>
                                 <li class="nav-item"><a class="page-scroll" href="#contact">Contacto</a></li>
                             </ul>
@@ -117,7 +117,7 @@
                         <div class="row">
                             <div class="col-lg-6">
                                 <div class="slider-content">
-                                    <h1 class="title">Bienvenido al mundo de la innovación digital. </h1>
+                                    <h1 class="title">Bienvenido a la innovación digital. </h1>
                                     <p class="text">Desarrolla tu idea para impulsar tu éxito.</p>
                                     <!-- <ul class="slider-btn rounded-buttons">
                                         <li><a class="main-btn rounded-one" href="#">GET STARTED</a></li>
