--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6 col-md-10">
                     <div class="section-title text-center pb-30">
-                        <h3 class="title">Contactanos</h3>
+                        <h3 class="title">Contáctanos</h3>
                         <p class="text">¿Necesitas asesoría en el desarrollo de tu proyecto?</p>
                     </div> <!-- section title -->
                 </div>
