add tecnologias, proyectos

--- a/index.html
+++ b/index.html
@@ -79,11 +79,12 @@
                         </button>
 
                         <div class="collapse navbar-collapse sub-menu-bar" id="navbarTwo">
-                            <ul class="navbar-nav m-auto">
+                            <ul class="navbar-nav mx-auto">
                                 <li class="nav-item active"><a class="page-scroll" href="#home">Inicio</a></li>
                                 <li class="nav-item"><a class="page-scroll" href="#services">Servicios</a></li>
                                 <li class="nav-item"><a class="page-scroll" href="#team">Conócenos</a></li>
                                 <li class="nav-item"><a class="page-scroll" href="#tecnologias">Tecnologías</a></li>
+                                <li class="nav-item"><a class="page-scroll" href="#proyectos">Tecnologías</a></li>
                                 <li class="nav-item"><a class="page-scroll" href="#contact">Contacto</a></li>
                             </ul>
                         </div>
@@ -206,18 +207,20 @@
 
     <!--====== TEAM START ======-->
 
-    <section id="team" class="team-area pt-120 pb-130">
+    <section id="team" class="team-area pt-100 pb-100">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-9 col-md-10">
                     <div class="section-title text-center pb-30">
                         <h3 class="title">Conócenos</h3>
+
                         <p class="text">Expertos en desarrollo de software a medida.<br />
                             Somos un equipo apasionado y experto en desarrollo de software. Nos especializamos en crear
                             soluciones personalizadas para satisfacer las necesidades de nuestros clientes. Con un
                             enfoque en la calidad y la innovación, trabajamos en estrecha colaboración con usted para
                             impulsar el crecimiento de su negocio a través de la tecnología. Confíe en nuestro
                             conocimiento y experiencia para llevar su visión a la realidad.</p>
+                        <img class="shape" width="450px;" src="assets/images/team.jpg" alt="Shape">
                     </div> <!-- section title -->
                 </div>
             </div> <!-- row -->
@@ -226,7 +229,7 @@
 
     <!--====== TEAM  ENDS ======-->
 
-    <section id="tecnologias" class="team-area pt-120 pb-130">
+    <section id="tecnologias" class="team-area pt-120 pb-100 features-area">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-9 col-md-10">
@@ -254,25 +257,22 @@
                             <div class="col" style="width: 50px;" title="Amazon Web Services">
                                 <img src="./assets/images/aws-icon.svg" alt="Amazon Web Services" />
                             </div>
+                            <div class="col-3" style="width: 50px;" title="Transbank">
+                                <img src="./assets/images/transbank.svg" alt="Transbank" />
+                            </div>
                             <div class="col" style="width: 50px;" title="Git">
                                 <img src="./assets/images/git-icon.svg" alt="Git" />
                             </div>
-                            <div class="col" style="width: 50px;" title="Linux">
-                                <img src="./assets/images/linux-icon.svg" alt="Linux" />
-                            </div>
                         </div>
                         <div class="row pt-5">
-                            <div class="col" style="width: 50px;" title="Angular">
-                                <img src="./assets/images/angular-icon.svg" alt="Angular" />
+                            <div class="col-4" title="Azure">
+                                <img src="./assets/images/azure.svg" alt="Azure" />
                             </div>
                             <div class="col" style="width: 50px;" title="Docker">
                                 <img src="./assets/images/docker-icon.svg" alt="Docker" />
                             </div>
                             <div class="col" style="width: 50px;" title="Android">
                                 <img src="./assets/images/android-icon.svg" alt="Android" />
-                            </div>
-                            <div class="col" style="width: 50px;" title="Javascript">
-                                <img src="./assets/images/js-icon.svg" alt="Javascript" />
                             </div>
                             <div class="col" style="width: 50px;" title="Python">
                                 <img src="./assets/images/python-icon.svg" alt="Python" />
@@ -282,6 +282,22 @@
                             </div>
 
                         </div>
+                    </div> <!-- section title -->
+                </div>
+            </div> <!-- row -->
+        </div> <!-- container -->
+    </section>
+
+    <section id="proyectos" class="team-area pt-100 pb-100">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-9 col-md-10">
+                    <div class="section-title text-center pb-30">
+                        <h3 class="title">Proyectos</h3>
+
+                        <p class="text">Como empresa de desarrollo informático, hemos tenido la oportunidad de ejecutar proyectos diversos y
+                            personalizados, creando soluciones tecnológicas que impulsan el éxito empresarial.</p>
+                        <img class="shape" width="450px;" src="assets/images/team.jpg" alt="Shape">
                     </div> <!-- section title -->
                 </div>
             </div> <!-- row -->
