--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                 <li class="nav-item"><a class="page-scroll" href="#services">Servicios</a></li>
                                 <li class="nav-item"><a class="page-scroll" href="#team">Conócenos</a></li>
                                 <li class="nav-item"><a class="page-scroll" href="#tecnologias">Tecnologías</a></li>
-                                <li class="nav-item"><a class="page-scroll" href="#proyectos">Tecnologías</a></li>
+                                <li class="nav-item"><a class="page-scroll" href="#proyectos">Proyectos</a></li>
                                 <li class="nav-item"><a class="page-scroll" href="#contact">Contacto</a></li>
                             </ul>
                         </div>
@@ -295,7 +295,8 @@
                     <div class="section-title text-center pb-30">
                         <h3 class="title">Proyectos</h3>
 
-                        <p class="text">Como empresa de desarrollo informático, hemos tenido la oportunidad de ejecutar proyectos diversos y
+                        <p class="text">Como empresa de desarrollo informático, hemos tenido la oportunidad de ejecutar
+                            proyectos diversos y
                             personalizados, creando soluciones tecnológicas que impulsan el éxito empresarial.</p>
                         <img class="shape" width="450px;" src="assets/images/team.jpg" alt="Shape">
                     </div> <!-- section title -->
