Se agregó experiencia y iconos de empresas

--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                             En nuestra empresa, nos mantenemos a la vanguardia de la tecnología para brindar soluciones
                             de desarrollo de software de calidad. Nuestro equipo de expertos utiliza una amplia gama de
                             tecnologías modernas y herramientas líderes en la industria para crear aplicaciones
-                            eficientes y de alto rendimiento
+                            eficientes y de alto rendimiento
                         </p>
                         <br />
                         <div class="row">
@@ -293,12 +293,26 @@
             <div class="row justify-content-center">
                 <div class="col-lg-9 col-md-10">
                     <div class="section-title text-center pb-30">
-                        <h3 class="title">Proyectos</h3>
+                        <h3 class="title">Experiencia</h3>
 
-                        <p class="text">Como empresa de desarrollo informático, hemos tenido la oportunidad de ejecutar
-                            proyectos diversos y
-                            personalizados, creando soluciones tecnológicas que impulsan el éxito empresarial.</p>
-                        <img class="shape" width="450px;" src="assets/images/team.jpg" alt="Shape">
+                        <p class="text">Como empresa de desarrollo informático, hemos tenido la oportunidad de trabajar
+                            para distintos clientes, realizando proyectos diversos y soluciones técnologicas a la médida según 
+                            los requerimientos informados por el cliente</p>
+                        <br>
+                        <div class="row flex">
+                            <div class="col" style="width: 50px;" title="Claro">
+                                <img src="./assets/images/claro-icon.png" alt="Claro" />
+                            </div>
+                            <div class="col" style="width: 50px; display: flex; align-items: center; justify-content: center;" title="Falabella">
+                                <img src="./assets/images/falabella-icon.png" alt="Falabella" />
+                            </div>                            
+                            <div class="col" style="width: 50px; display: flex; align-items: center; justify-content: center;"  title="Interclinica">
+                                <img src="./assets/images/interclinica-icon.png" alt="Interclinica" />
+                            </div>
+                            <div class="col" style="width: 50px;" title="MasterKey">
+                                <img src="./assets/images/masterkey-icon.png" alt="MasterKey" />
+                            </div>
+                        </div>
                     </div> <!-- section title -->
                 </div>
             </div> <!-- row -->
