--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                                 <li class="nav-item"><a class="page-scroll" href="#services">Servicios</a></li>
                                 <li class="nav-item"><a class="page-scroll" href="#team">Conócenos</a></li>
                                 <li class="nav-item"><a class="page-scroll" href="#tecnologias">Tecnologías</a></li>
-                                <li class="nav-item"><a class="page-scroll" href="#proyectos">Proyectos</a></li>
+                                <li class="nav-item"><a class="page-scroll" href="#proyectos">Experiencia</a></li>
                                 <li class="nav-item"><a class="page-scroll" href="#contact">Contacto</a></li>
                             </ul>
                         </div>
@@ -296,17 +296,22 @@
                         <h3 class="title">Experiencia</h3>
 
                         <p class="text">Como empresa de desarrollo informático, hemos tenido la oportunidad de trabajar
-                            para distintos clientes, realizando proyectos diversos y soluciones técnologicas a la médida según 
+                            para distintos clientes, realizando proyectos diversos y soluciones técnologicas a la médida
+                            según
                             los requerimientos informados por el cliente</p>
                         <br>
                         <div class="row flex">
                             <div class="col" style="width: 50px;" title="Claro">
                                 <img src="./assets/images/claro-icon.png" alt="Claro" />
                             </div>
-                            <div class="col" style="width: 50px; display: flex; align-items: center; justify-content: center;" title="Falabella">
+                            <div class="col"
+                                style="width: 50px; display: flex; align-items: center; justify-content: center;"
+                                title="Falabella">
                                 <img src="./assets/images/falabella-icon.png" alt="Falabella" />
-                            </div>                            
-                            <div class="col" style="width: 50px; display: flex; align-items: center; justify-content: center;"  title="Interclinica">
+                            </div>
+                            <div class="col"
+                                style="width: 50px; display: flex; align-items: center; justify-content: center;"
+                                title="Interclinica">
                                 <img src="./assets/images/interclinica-icon.png" alt="Interclinica" />
                             </div>
                             <div class="col" style="width: 50px;" title="MasterKey">
